--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
                                     </div>
                                 </form>
                             </div>
+                            {% comment %} end header {% endcomment %}
+                            {% comment %} sidebar {% endcomment %}
                             <div class="pcoded-navigation-label">Navigation</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="active">
@@ -400,6 +402,8 @@
                             </ul>
                         </div>
                     </nav>
+                    {% comment %} end sidebar {% endcomment %}
+                    {% comment %} content {% endcomment %}
                     <div class="pcoded-content">
                         <!-- Page-header start -->
                         <div class="page-header">
@@ -774,6 +778,8 @@
             </div>
         </div>
     </div>
+    {% comment %} end content {% endcomment %}
+
     <!-- Warning Section Starts -->
     <!-- Older IE warning message -->
     <!--[if lt IE 10]>
@@ -820,6 +826,8 @@
     <!-- Warning Section Ends -->
 
     <!-- Required Jquery -->
+
+    {% comment %} footer {% endcomment %}
     <script type="text/javascript" src="assets/js/jquery/jquery.min.js "></script>
     <script type="text/javascript" src="assets/js/jquery-ui/jquery-ui.min.js "></script>
     <script type="text/javascript" src="assets/js/popper.js/popper.min.js"></script>
